--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -16,7 +16,7 @@
     
                 <ul>
                     <li>Telefon: <a href="tel:040-1234567">040-1234567</a></li>
-                    <li>Epost: <a href="mailto:cafelugnet&commat;malmo.com">cafelugnet&commat;malmo.com</a></li>
+                    <li>E-post: <a href="mailto:cafelugnet&commat;malmo.com">cafelugnet&commat;malmo.com</a></li>
                     <li>Adress: Södra Förstadsgatan 19A, Malmö</li>
                 </ul>
             </div>
