--- a/src/app/location/location.component.html
+++ b/src/app/location/location.component.html
@@ -1,6 +1,6 @@
 <section id="hittahit">
     <div class="map-wrap">
         <h3>Hitta hit</h3>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d473.87674208869294!2d13.001103083614073!3d55.59939654564093!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4653a15704c7ad47%3A0xad17e467317718ee!2zU8O2ZHJhIEbDtnJzdGFkc2dhdGFuIDEzLCAyMTEgNDMgTWFsbcO2!5e0!3m2!1ssv!2sse!4v1716895109585!5m2!1ssv!2sse" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d473.87674208869294!2d13.001103083614073!3d55.59939654564093!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4653a15704c7ad47%3A0xad17e467317718ee!2zU8O2ZHJhIEbDtnJzdGFkc2dhdGFuIDEzLCAyMTEgNDMgTWFsbcO2!5e0!3m2!1ssv!2sse!4v1716895109585!5m2!1ssv!2sse" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" title="Karta"></iframe>
     </div>
 </section>
