--- a/src/app/booking/booking.component.css
+++ b/src/app/booking/booking.component.css
@@ -89,7 +89,8 @@ input, select, textarea {
 
 /*btn-klart*/
 .btn-confirm-ok {
-    background-color: #C5D4C7;
+    background-color: #1c3021;
+    color: white;
     border: none;
     box-shadow: 0px 2px 2px 0px rgb(30, 30, 30, 0.4);
     width: 100%;
@@ -129,7 +130,8 @@ span.booking-error {
     font-size: 1.8rem;
     padding: 2rem;
     text-align: center;
-    background-color: #C5D4C7;
+    background-color: #1c3021;
+    color: white;
     margin-top: 2rem;
     box-shadow: 0px 2px 4px 0px rgb(30, 30, 30, 0.4);
  }
