--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -8,9 +8,15 @@
         <label for="password">Lösenord:</label>
         <input type="password" id="password" [(ngModel)]="password" [ngModelOptions]="{standalone: true}">
 
-        <div><p class="error-login">{{errorMessage}}</p></div>
+        <div>
+            <p class="error-login">{{errorMessage}}</p>
+        </div>
 
         <button id="btn-login" (click)="login()"><fa-icon [icon]="faUserIcon" class="user-mini-icon"></fa-icon>Logga in</button>
         <button id="btn-backToStart" (click)="backToStartBtn()"><fa-icon [icon]="faChevronIcon" class="left-arrow"></fa-icon>Tillbaka till Startsida</button>
+        <app-loading-spinner [isLoading]="isLoading"></app-loading-spinner>
     </form>
+    <div class="spinner-loading-login" *ngIf="!isLoading"></div>
+
+    
 </div>
