--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,18 +1,23 @@
 <section class="menu" id="lunchmeny">
-    <h3>Lunch Meny</h3>
+    <h3>Meny</h3>
     <p>Lunch serveras mellan kl 11.00-14.00 varje dag, kaffe efter maten ingår</p>
 
-    <article *ngFor="let menuData of dishes">
-        <h5>{{menuData.title}}</h5>
-        <p>{{menuData.description}}</p>
-        <p class="menu-allergy">{{menuData.allergy}}</p>
-        <p class="menu-price">{{menuData.price}}kr</p>
-    </article>
+    <!--Ifall det tar tid för anrop, ska en loading spinner dyka upp-->
+    <app-loading-spinner [isLoading]="isLoading"></app-loading-spinner>
 
-    <article>
-        <h4>Fika</h4>
-        <p>Vi har allt från frallar till fikabröd och bakverk.</p>
-        <p>Vi erbjuder även kalla och varma dryck efter smak.</p>
+    <div *ngIf="!isLoading">
+        <article *ngFor="let menuData of dishes">
+            <h5>{{menuData.title}}</h5>
+            <p>{{menuData.description}}</p>
+            <p class="menu-allergy">{{menuData.allergy}}</p>
+            <p class="menu-price">{{menuData.price}}kr</p>
+        </article>
 
-    </article>
+        <article>
+            <h4>Fika</h4>
+            <p>Vi har allt från frallar till fikabröd och bakverk.</p>
+            <p>Vi erbjuder även kalla och varma dryck efter smak.</p>
+
+        </article>
+    </div>
 </section>
