--- a/src/app/admin-bookings/admin-bookings.component.html
+++ b/src/app/admin-bookings/admin-bookings.component.html
@@ -9,34 +9,38 @@
         </div>
         <div class="booking-table-container">
             <h2 #bookingTable>Bordsbokningar</h2>
-            <table>
-                <tr>
-                    <th>Namn:</th>
-                    <th>Telefon:</th>
-                    <th>Email</th>
-                    <th>Antal gäster</th>
-                    <th>Datum</th>
-                    <th>Tid</th>
-                    <th>Meddelande:</th>
-                    <th></th>
-                </tr>
-                <tr *ngFor="let bookingData of getBookings" class="admin-bookings">
-                    <td data-label="Namn: ">{{ bookingData.firstname}} {{ bookingData.lastname}}</td>
-                    <td data-label="Mobilnummer: ">{{ bookingData.phonenumber}}</td>
-                    <td data-label="Epost: ">{{ bookingData.email}}</td>
-                    <td data-label="Antal gäster: ">{{ bookingData.guests}}</td>
-                    <td data-label="Datum: ">{{ bookingData.date}}</td>
-                    <td data-label="Tid: ">kl:{{ bookingData.time}}</td>
-                    <td data-label="Meddelande: ">{{ bookingData.bookingMessage}}</td>
+            <div *ngIf="!isLoading">
+                <table>
+                    <tr>
+                        <th>Namn:</th>
+                        <th>Telefon:</th>
+                        <th>Email</th>
+                        <th>Antal gäster</th>
+                        <th>Datum</th>
+                        <th>Tid</th>
+                        <th>Meddelande:</th>
+                        <th></th>
+                    </tr>
+                    <tr *ngFor="let bookingData of getBookings" class="admin-bookings">
+                        <td data-label="Namn: ">{{ bookingData.firstname}} {{ bookingData.lastname}}</td>
+                        <td data-label="Mobilnummer: ">{{ bookingData.phonenumber}}</td>
+                        <td data-label="Epost: ">{{ bookingData.email}}</td>
+                        <td data-label="Antal gäster: ">{{ bookingData.guests}}</td>
+                        <td data-label="Datum: ">{{ bookingData.date}}</td>
+                        <td data-label="Tid: ">kl:{{ bookingData.time}}</td>
+                        <td data-label="Meddelande: ">{{ bookingData.bookingMessage}}</td>
 
-                    <td class="table-btn" colspan="6">
-                        <div class="btn-bookings-admin">
-                            <button (click)="updateBooking(bookingWrapForm, bookingData, bookingComponent)"><fa-icon [icon]="faPenIcon" class="pencil-icon"></fa-icon>Redigera</button>
-                            <button (click)="deleteBooking(bookingData._id)"><fa-icon [icon]="faTrashIcon" class="trash-icon"></fa-icon>Ta bort</button>
-                        </div>
-                    </td>
-                </tr>
-            </table>
+                        <td class="table-btn" colspan="6">
+                            <div class="btn-bookings-admin">
+                                <button (click)="updateBooking(bookingWrapForm, bookingData, bookingComponent)"><fa-icon [icon]="faPenIcon" class="pencil-icon"></fa-icon>Redigera</button>
+                                <button (click)="deleteBooking(bookingData._id)"><fa-icon [icon]="faTrashIcon" class="trash-icon"></fa-icon>Ta bort</button>
+                            </div>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+            <!--Ifall det tar tid för anrop, ska en loading spinner dyka upp-->
+            <app-loading-spinner [isLoading]="isLoading"></app-loading-spinner>
         </div>
 
     </div>
