--- a/src/app/booking/booking.component.html
+++ b/src/app/booking/booking.component.html
@@ -98,6 +98,9 @@
             </div>
             }
 
+             <!--Ifall det tar tid för anrop, ska en loading spinner dyka upp-->
+             <app-loading-spinner [isLoadingSpinner]="isLoading"></app-loading-spinner>
+
         </form>
     </div>
 </section>
