--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -3,7 +3,7 @@
     <p>Lunch serveras mellan kl 11.00-14.00 varje dag, kaffe efter maten ingår</p>
 
     <!--Ifall det tar tid för anrop, ska en loading spinner dyka upp-->
-    <app-loading-spinner [isLoading]="isLoading"></app-loading-spinner>
+    <app-loading-spinner [isLoadingSpinner]="isLoading"></app-loading-spinner>
 
     <div *ngIf="!isLoading">
         <article *ngFor="let menuData of dishes">
