--- a/src/app/admin-navbar/admin-navbar.component.html
+++ b/src/app/admin-navbar/admin-navbar.component.html
@@ -4,7 +4,7 @@
     </div>
     <ul  [ngClass]="{'active': isMenuActivated}">
         <li><a routerLink="/admin" routerLinkActive="activeLink">Meny</a></li>
-        <li><a routerLink="/hanterameny" routerLinkActive="activeLink">Hantera Meny</a></li>
+        <li><a routerLink="/hanterameny" routerLinkActive="activeLink">Hantera Maträtter</a></li>
         <li><a routerLink="/bokningar" routerLinkActive="activeLink">Hantera Bokningar</a></li>
     </ul>
 </nav>
