--- a/src/app/loading-spinner/loading-spinner.component.html
+++ b/src/app/loading-spinner/loading-spinner.component.html
@@ -1,3 +1,3 @@
-<div class="loading-spinner-wrap" *ngIf="isLoading">
+<div class="loading-spinner-wrap" *ngIf="isLoadingSpinner=== true">
     <div class="spinner"></div>
 </div>
