--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -14,7 +14,7 @@
 
         <button id="btn-login" (click)="login()"><fa-icon [icon]="faUserIcon" class="user-mini-icon"></fa-icon>Logga in</button>
         <button id="btn-backToStart" (click)="backToStartBtn()"><fa-icon [icon]="faChevronIcon" class="left-arrow"></fa-icon>Tillbaka till Startsida</button>
-        <app-loading-spinner [isLoading]="isLoading"></app-loading-spinner>
+        <app-loading-spinner [isLoadingSpinner]="isLoading"></app-loading-spinner>
     </form>
     <div class="spinner-loading-login" *ngIf="!isLoading"></div>
 
