--- a/src/app/scroll-to-top-btn/scroll-to-top-btn.component.css
+++ b/src/app/scroll-to-top-btn/scroll-to-top-btn.component.css
@@ -6,7 +6,6 @@
     color: #1e1e1e;
     border: none;
     padding: 1rem;
-    border-radius: 5px;
     cursor: pointer;
     box-shadow: 0px 2px 4px 0px rgb(30, 30, 30, 0.4);
     z-index: 100;
@@ -15,6 +14,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    transition: border-radius 0.1s ease-in-out;
+}
+
+#btn-scrollTop:hover {
+    border-radius: 2rem;
 }
 
 button {
