Fixat till footer synlighet, lagt till scroll arrow btn i header som scrollar ner, ändrat text error + uppdaterat i bokningsvalidator, rensat kod

--- a/src/app/admin-navbar/admin-navbar.component.css
+++ b/src/app/admin-navbar/admin-navbar.component.css
@@ -59,6 +59,7 @@ nav ul li:hover::after, nav ul li:focus::after {
     display: none;
 }
 
+/*Media queries*/
 
 @media screen and (max-width:850px) {
 
