--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -10,6 +10,7 @@
     </div>
     <div class="hero-text">
         <h1 id="intro"><a routerLink="/">Café Lugnet</a></h1>
+        <app-arrow-down-scroll (click)="onArrowPress()"></app-arrow-down-scroll>
     </div>
 
 </header>
