--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -4,7 +4,7 @@ nav {
     padding: 1rem 2rem;
     max-width: 100%;
     width: 100%;
-
+    box-shadow: 0px 2px 2px 0px rgb(30, 30, 30, 0.4);
     z-index: 15;
     position: sticky;
     border-top: 1rem solid white;
@@ -58,7 +58,7 @@ nav ul li:focus::after {
 }
 
 
-
+/*Media queries*/
 
 @media screen and (max-width:850px) {
 
