Fixat kontakt för responsivitet

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -2,16 +2,11 @@
     <div class="contact-wrap">
         <h3>Kontakta oss</h3>
         <div class="contact-list">
-            <ul>
-                <li><fa-icon [icon]="faPhoneIcon" id="phone-icon"></fa-icon>Telefon:</li>
-                <li><fa-icon [icon]="faEpostIcon" id="epost-icon"></fa-icon>E-post:</li>
-                <li><fa-icon [icon]="faLocationIcon" id="location-icon"></fa-icon>Adress:</li>
-            </ul>
 
             <ul>
-                <li><a href="tel:040-1234567">040-1234567</a></li>
-                <li><a href="mailto:cafelugnet&commat;malmo.com">cafelugnet&commat;malmo.com</a></li>
-                <li>Södra Förstadsgatan 19A, Malmö</li>
+                <li><a href="tel:040-1234567"><fa-icon [icon]="faPhoneIcon" id="phone-icon"></fa-icon>Telefon: 040-1234567</a></li>
+                <li><a href="mailto:cafelugnet&commat;malmo.com"><fa-icon [icon]="faEpostIcon" id="epost-icon"></fa-icon>E-post: cafelugnet&commat;malmo.com</a></li>
+                <li><fa-icon [icon]="faLocationIcon" id="location-icon"></fa-icon>Adress: Södra Förstadsgatan 19A, Malmö</li>
             </ul>
         </div>
 
