--- a/src/app/arrow-down-scroll/arrow-down-scroll.component.css
+++ b/src/app/arrow-down-scroll/arrow-down-scroll.component.css
@@ -12,7 +12,7 @@ fa-icon {
     border-radius: 50rem;
     padding: 0.5rem 1rem;
     box-shadow: 0px 1px 4px 0px rgb(30, 30, 30, 0.4);
-    animation: anim-lineDown 2s infinite;
+    animation: anim-lineDown 2s 1.5s infinite;
     opacity: 0;
     margin-top: 3rem;
     border: none;
