--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -39,11 +39,11 @@
         <div class="footer-social">
             <h5>Snabba Länkar</h5>
             <ul>
-                <li>Meny</li>
-                <li>Om oss</li>
-                <li>Hitta oss</li>
-                <li>Boka bord</li>
-                <li>Admin</li>
+                <li><a href="#lunchmeny">Meny</a></li>
+                <li><a href="#om">Om oss</a></li>
+                <li><a href="#hittahit">Hitta oss</a></li>
+                <li><a href="#bokabord">Boka bord</a></li>
+                <li><a routerLink="login">Admin</a></li>
             </ul>
         </div>
     </div>
