css styling och skapat readme fil

--- a/src/app/admin-update/admin-update.component.css
+++ b/src/app/admin-update/admin-update.component.css
@@ -131,12 +131,14 @@ span.menu-error {
     display: block;
     font-size: 1.6rem;
     font-style: italic;
+    color: red;
 }
 
 .error-form-message {
     display: block;
     font-size: 1.8rem;
     font-style: italic;
+    color: red;
 }
 
 /*Tabell med maträtter*/
