ändrat små buggar i mobil skärm

--- a/src/app/scroll-to-top-btn/scroll-to-top-btn.component.css
+++ b/src/app/scroll-to-top-btn/scroll-to-top-btn.component.css
@@ -17,6 +17,11 @@
     transition: border-radius 0.1s ease-in-out;
 }
 
+a {
+    color: #1e1e1e;
+    text-decoration: none;
+}
+
 #btn-scrollTop:hover {
     border-radius: 2rem;
 }
